catalog content scss fix text overflow in card - align-items: flex-start;

--- a/src/sass/blocks/catalog.scss
+++ b/src/sass/blocks/catalog.scss
@@ -59,6 +59,7 @@
         display: flex;
         flex-direction: column;
         row-gap: 20px;
+        align-items: flex-start;
     }
 
     &__content-wrapper {
